fix search bar alignment on mobile devices
Change-Type: manual-edit

--- a/app/components/search-bar/search-bar.module.css
+++ b/app/components/search-bar/search-bar.module.css
@@ -15,7 +15,8 @@
 @media (max-width: 480px) {
   .form {
     width: 288px;
-    margin-left: var(--space-5);
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
